# reformed-k8s-demo

./: README.md  pyproject.toml  using_reformed.ipynb
reformed/: app.k8.yaml  ingress.k8.yaml
reformed/reference/: pod.k8.yaml
