[tool.poetry]
name = "reformed-k8s-init"
version = "0.1.0"
description = "An example app that installs Reformed on k8s"
authors = ["Faisal Alquaddoomi <faisal.alquaddoomi@cuanschutz.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
